--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "todo-list",
-  "version": "0.1.0",
-  "private": true,
+  "packageManager": "yarn@3.2.2",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -17,12 +16,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
