get,post,delete added

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "todo-list",
   "packageManager": "yarn@3.2.2",
+  "proxy":"http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
